--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "jsonwebtoken": "^8.5.1",
+    "npm": "^6.14.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
